# hawck

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Hawck.lua  KBDConnection.hpp  KBDDaemon.cpp  KBDServer.cpp  KBDServer.hpp  Keyboard.hpp  Keymap.lua  LICENSE  LuaUtils.cpp  LuaUtils.hpp  MacroDaemon.hpp  README.md  RemoteUDevice.hpp  UDevice.cpp  UDevice.hpp  UNIXConnection.hpp  UNIXSocket.hpp  app.lua  default.hwk  ev.c  ev2.hwk  ev_script.hwk  example.hwk  expansion.hwk  fn.lua  hawck-s.cpp  install.sh  install_hawck.desktop  kbd.lua  keylogger.c  meson.build  meson_options.txt  run.sh  todo.hwk  utils.lua
.github/ISSUE_TEMPLATE/: bug_report.md
build-scripts/: 99-hawck-input.rules  build.sh  dl-dep.sh  hawck-inputd.service  hawck-macrod.desktop  hawck-setup.sh  hawck.desktop  keyboards.txt  run-hawck.sh
build-scripts/dependencies/: debian-deps.txt
changelogs/: changelog_0.6.0.md  changelog_0.8.0.md
docs/: h2m.sh  hawck-inputd.1  hawck-inputd.h2m  hawck-inputd.md  hawck-macrod.1  hawck-macrod.h2m  hawck-macrod.md  help2man_fixup.py  lsinput.1  lsinput.h2m  meson.build
hawck-ui/: LICENSE  README.md  install-hawck-ui.sh  meson.build  run-hawck-ui-debug.sh  setup.py  setup_config.json.in
hawck-ui/hawck_ui/: __main__.py  cfgmsg.py  external.py  locations.py  log_retriever.py  main.py  os_open.py  priv_actions.py  privesc.py  sudo_fallback.py  template_manager.py  window.py
hawck-ui/hawck_ui/resources/glade-xml/: error_log.ui  window.ui
images/: arch.dot
keymaps/: aliases.lua  default_linux.lua
keymaps/qwerty/: no.map
lang/en/: en_letter_freq.csv
src/: CMakeLists.txt  CSV.cpp  CSV.hpp  Daemon.cpp  Daemon.hpp  Dir.cpp  Dir.hpp  FIFOWatcher.cpp  FIFOWatcher.hpp  FSWatcher.cpp  FSWatcher.hpp  IUDevice.hpp  InputCodes.cpp  KBDAction.hpp  KBDB.cpp  KBDB.hpp  KBDConnection.hpp  KBDDaemon.cpp  KBDDaemon.hpp  KBDManager.cpp  KBDManager.hpp  KeyCombo.hpp  KeyValue.hpp  Keyboard.cpp  Keyboard.hpp  Logging.hpp  LuaConfig.cpp  LuaConfig.hpp  LuaUtils.cpp  LuaUtils.hpp  MacroDaemon.cpp  MacroDaemon.hpp  Notifications.cpp  Notifications.hpp  Permissions.cpp  Permissions.hpp  Popen.cpp  Popen.hpp  RemoteUDevice.cpp  RemoteUDevice.hpp  (+18 more)
src/Lua/: Hawck.lua  Keymap.lua  app.lua  builtins.lua  cfg.lua  config.lua  init.lua  json.lua  kbd.lua  match.lua  rd.lua  strict.lua  utils.lua
src/gui/: main.py  window.py  window.ui
src/hwk2lua/: hwk2lua.py
src/hwk2lua/tests/: programming_mode.hwk
src/macro-scripts/: default.hwk  example.hwk
src/scripts/: get-kbd-args.sh  get-kbd.sh  get-kbds.awk  get-lua-errors.sh  get_aliases.lua  hawck-add.sh  install-hwk-script.sh  kalias.py  kalias_window.glade  kill-9-hawck.sh  letter_freq.awk
src/tests/: CSV-tests.cpp
src/tests/CSV-tests/: CSV-tests.cpp  test-02.csv
src/tests/FSWatcher-tests/: FSWatcher-tests.cpp
src/tools/: .projectile  CMakeLists.txt  README.md  lsinput.cpp  lskbd.rb
tests/: .projectile  CSV-tests.cpp  FSWatcher-tests.cpp  Popen-tests.cpp  Version-tests.cpp  XDG-tests.cpp  hawck-tests  meson.build
tests/CSV-tests/: test-01.csv
